<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->

<resources>
    <string name="app_name">旺铺</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_exit">退出</string>
    <string name="menu_switch_user">切换用户</string>

    <string name="login_button_text">登录</string>
    <string name="login_ongoing">登录中&#8230;&#8230;&#8230;</string>
    <string name="login_input_hint_username">请输入用户名</string>
    <string name="login_input_hint_pwd">请输入密码</string>
    <string name="login_err_username">用户名不正确！</string>
    <string name="login_err">用户名或者密码不正确！</string>
    <string name="login_err_pwd">密码不正确！</string>
    <string name="login_err_not_exist_user">用户不存在！</string>
    <string name="login_err_poor_network">网络异常，请稍后再试！</string>
    <string name="login_hint_success">登录成功！</string>
    <string name="login_username_format_error">请输入正确的用户名！</string>
    <string name="login_pwd_format_error">请输入正确的密码！</string>
    <string name="login_service_error">系统异常</string>
    <string name="login_request_error">请求异常</string>
    <string name="login_login_failed">用户登录失败</string>
    <string name="login_token_refresh">登录有效期失效，请重新登录</string>
    <string name="netConnectedError">网络异常，请稍后再试！</string>
    <string name="dialog_common_loading">正在加载&#8230;&#8230;&#8230;</string>
    <string name="dialog_btn_ok">确定</string>
    <string name="dialog_btn_cancel">取消</string>
    <string name="dialog_exit_confirm_title">退出</string>
    <string name="dialog_exit_confirm_content">正在操作，是否确定退出？</string>
    <string name="dialog_common_submitting">正在提交&#8230;&#8230;&#8230;</string>
    <!-- 网络和请求相关 -->
    <string name="requestError">请求发生错误</string>
    <string-array name="str_arr">
        <item>设置1</item>
        <item>设置2</item>
    </string-array>
    <string-array name="str_arr_val">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="p2refresh_head_load_more">加载更多</string>
    <string name="p2refresh_end_load_more">更    多</string>
    <string name="p2refresh_end_click_load_more">点击加载</string>
    <string name="p2refresh_release_refresh">松开刷新</string>
    <string name="p2refresh_pull_to_refresh">下拉刷新</string>
    <string name="p2refresh_doing_head_refresh">正在刷新&#8230;</string>
    <string name="p2refresh_doing_end_refresh">加载中&#8230;</string>
    <string name="p2refresh_refresh_lasttime">最近更新&#160;&#058;&#160;</string>
    <string name="image_desc">图片</string>

    <!-- <string name="ver">版本: v1.0.0</string>
     <string name="size">大小: 13MB</string>
     <string name="mgr">管理</string>-->
    <!-- <string name="name">应用Demo</string>-->
    <string name="yuan_sign">￥</string>
    <string name="trade_fee">应付:%s</string>
    <string name="trade_payment">实付:%s</string>
    <string name="sync">未同步</string>
    <string name="sync_alredy">已同步</string>
    <string name="order_id">订单号:</string>
    <string name="sync_success">同步失败</string>
    <string name="session_expire">会话过期,请重新登录!</string>


    <string name="key_tracking_mode">key_tracking_mode</string>
    <string name="tracking_mode_left">Left</string>
    <string name="tracking_mode_right">Right</string>
    <string name="tracking_mode_bottom">Bottom</string>
    <string name="tracking_mode_all">All</string>


</resources>
