<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/transparent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:textColor="@color/dialog_content"
            android:text="@string/dialog_exit_confirm_content"
            android:layout_margin="20dp"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="right"
            android:layout_margin="20dp"
            android:layout_alignParentRight="true"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:textColor="@color/eposColorAccent"
                android:text="@string/dialog_btn_cancel"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/tv_ok"
                android:layout_marginLeft="25dp"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:textColor="@color/eposColorAccent"
                android:layout_gravity="right"
                android:gravity="right"
                android:text="@string/dialog_btn_ok"
                android:textSize="16sp"/>
        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>