<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--<include
        android:id="@+id/toolbar"
        layout="@layout/include_toolbar"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_username_wrapper"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <com.qianmi.hack.widget.ClearEditText
                android:id="@+id/et_login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:drawableRight="@drawable/custom_edit_clear"
                android:hint="@string/login_input_hint_username"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:text="caozupeng"
                android:textColor="@color/text_button_login"
                android:textCursorDrawable="@drawable/common_input_cursor"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_pwd_wrapper"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp">

            <com.qianmi.hack.widget.ClearEditText
                android:id="@+id/et_login_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:drawableRight="@drawable/custom_edit_clear"
                android:hint="@string/login_input_hint_pwd"
                android:inputType="textPassword"
                android:singleLine="true"
                android:text="caozupeng"
                android:textColor="@color/text_button_login"
                android:textCursorDrawable="@drawable/common_input_cursor"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="270dp"
            android:layout_height="46dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/common_green_btn_selector"
            android:focusable="true"
            android:text="@string/login_button_text"
            android:textColor="@color/text_button_login"
            android:textSize="17sp" />
    </LinearLayout>

</RelativeLayout>
